Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-12194

QPushButton containing images are not displayed correctly in Maemo

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.7.0
    • 4.6.2
    • (Inactive) Maemo 5
    • None
    • Maemo: N900 (PR 1.2) - Qt 4.6.2
      Desktop: Ubuntu 10.04 - Qt 4.6.3
    • 27d73921281d61c44b63de3ed70258fe0b0468ce

      A couple of screenshot is better than thousand words. Please give a look at this application I'm building, running on a N900 (of course with latest PR 1.2 installed): http://a.imageshack.us/img194/3969/screenshot2010071417591.png
      and look the same UI running on desktop: http://a.imageshack.us/img822/9967/lastgodesktop.jpg

      As you can see the images/buttons on Maemo are not displayed correctly. If I remember well this was a known bug and should have already been fixed, but it's not as you can see.

      Please let me know if there is any workaround available or if you're able to fix this in short time.

      Thanks.

        1. Screenshot-20100714-175916.png
          121 kB
          Andrea Grandi
        2. LastGo_Desktop.jpg
          30 kB
          Andrea Grandi
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            griebl Robert Griebl (closed Nokia identity) (Inactive)
            andreagrandi Andrea Grandi
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes