QMaemo5Style: allow vertical scaling of buttons despite Gtk not supporting it.

Task:     QTBUG-12194
RevBy:    Ralf Engels